Fix body overflow when header subtitle present

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -6,8 +6,9 @@
   height: 100%;
   max-height: 100%;
 
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  
   padding: g.$margin-base;
   gap: g.$margin-base;
 
@@ -20,8 +21,9 @@
 }
 
 .bodyWrapper {
-  height: calc(100% - g.$icon-base - 3 * g.$margin-base);
-  max-height: calc(100% - g.$icon-base - 3 * g.$margin-base);
+  min-height: 100%;
+  height: 100%;
+  max-height: 100%;
 
   display: grid;
   flex-grow: 1;
